# examples/node/apigateway/directory-routing/openapi.yml
@@ -174,6 +174,30 @@ components:
                     type: string
                 modified:
                     type: string
+        org-model:
+            title: org-model
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                address:
+                    type: string
+                city:
+                    type: string
+                state:
+                    type: string
+                zip:
+                    type: string
+                revenue:
+                    type: string
+                profit:
+                    type: string
+                created:
+                    type: string
+                modified:
+                    type: string
         post-grower-request:
             title: post-grower-request
             type: object
@@ -207,3 +231,37 @@ components:
                 email:
                     type: string
                     format: email
+        post-org-request:
+            title: post-org-request
+            type: object
+            required:
+                - name
+                - address
+                - city
+                - state
+                - zip
+            properties:
+                name:
+                    type: string
+                address:
+                    type: string
+                city:
+                    type: string
+                state:
+                    type: string
+                zip:
+                    type: string
+        patch-org-request:
+            title: patch-org-request
+            type: object
+            properties:
+                name:
+                    type: string
+                address:
+                    type: string
+                city:
+                    type: string
+                state:
+                    type: string
+                zip:
+                    type: string
